--- a/movies-explorer/src/components/Login/Login.css
+++ b/movies-explorer/src/components/Login/Login.css
@@ -55,6 +55,23 @@
     margin: 5px 0 24px;
 }
 
+.auth__input_invalid {
+    color: red;
+}
+
+.auth__error {
+    max-width: 396px;
+    height: 12px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    color: red;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .auth__button {
     width: 260px;
     height: 45px;
@@ -68,6 +85,10 @@
     color: white;
     border: 0;
     border-radius: 3px;
+}
+
+.auth__button_disable {
+    background-color: grey;
 }
 
 .auth__sign {
